src/compiler/tests/invalid/invalid_program1.klt
var a: Int;
var b: Int = 10;
var c: Int;

a = 10;
c = "hola";

fun max(num1: Int; num2: Int): Int {
    var res: Int;
    if (num1 < "num2") {
        res = num2;
    } else {
        res = num1;
    }

    return result;
}

fun main () : None {
    var a: Int;
    var b: String;
    var c: Int;

    a = 30 + 2 * 3;
    b = "a / 3";
    c = max(a, b);

    print("El numero mas grande es...")
    print(c);
}
